RESOLVED FIXED159729
"requiredShippingAddressFields" has been deprecated error thrown when using "requiredBillingAddressFields"
https://bugs.webkit.org/show_bug.cgi?id=159729
Summary "requiredShippingAddressFields" has been deprecated error thrown when using "...
Anders Carlsson
Reported 2016-07-13 11:33:50 PDT
"requiredShippingAddressFields" has been deprecated error thrown when using "requiredBillingAddressFields"
Attachments
Patch (2.09 KB, patch)
2016-07-13 11:34 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-07-13 11:34:48 PDT
Anders Carlsson
Comment 2 2016-07-13 11:36:52 PDT
Note You need to log in before you can comment on or make changes to this bug.