"requiredShippingAddressFields" has been deprecated error thrown when using "requiredBillingAddressFields" https://bugs.webkit.org/show_bug.cgi?id=159729 rdar://problem/27314974

Reviewed by Tim Horton.

Fix a paste-o.

* Modules/applepay/ApplePaySession.cpp:
(WebCore::createPaymentRequest):

Canonical link: https://commits.webkit.org/177868@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203168 268f45cc-cd09-0410-ab3c-d52691b4dbfc